# myeasyTools

./: LICENSE  disc.text  pyproject.toml
myeasyTools/: __init__.py  calc.py
