[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "myeasyTools"
dynamic = ["version", "description"]  
readme = "README.md"
license = { file = "LICENSE" }


authors = [
  { name="ahmed", email="ahmed_2uyy2h2h@example.com" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["myeasyTools*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.dynamic]
description = { file = ["disc.text"] }